# triplet-tiles

./: .gitignore  .impeccable.md  ANIMATIONS.md  AUDIO_DESIGN.md  AUDIO_IMPLEMENTATION_PLAN.md  EXTENSIONS_TODO.md  GAME_MODEL.md  GAME_SPEC.md  LEVELGEN.md  LICENSE  NOTICE  README.md  SETTINGS_SPEC.md  TESTING.md  WOOD_DESIGN_PLAN.md  game.js  index.html  levelgen-report.md  levels.generated.js  manifest.webmanifest  package-lock.json  package.json  playwright.config.js  style.css  sw.js  tile-layering.js
crates/levelgen-solver/: Cargo.toml
crates/levelgen-solver/src/: lib.rs  napi_impl.rs  solver.rs
lib/: audio-service.js  board-view.js  game-model.js  i18n.js  tile-types.js  win-star-fx.js
scripts/: build-native.js  capture-screenshot.js  generate-grain-texture.js  optimize-audio.js  playwright-static-server.js  static-server-lib.js
tests/: animation-flicker-temporal.spec.js  animation-flicker-visual.spec.js  audio-sfx.spec.js  batch-variation.test.js  blocked-tile-opacity.test.js  board-keyboard.spec.js  board-tile-layout-touch.spec.js  debug-solution-rapid-poll.spec.js  fly-tray-handoff.spec.js  game-core.spec.js  game-model.test.mjs  generator-auto-triplets.test.js  grid-inference.test.js  levelgen.spec.js  mobile-viewport.spec.js  modal-a11y.spec.js  param-sweep.test.js  perf-board-interaction.spec.js  powerups.spec.js  progression-stats.spec.js  render-efficiency.spec.js  score-v2.spec.js  shapes-pyramid.test.js  solver-native.test.cjs  template-z-footprint.test.js  tray-rtl-geometry.spec.js
tools/: copy-dist.js  generate-levels.js  generate-pwa-icons.js  (+1 more)
(+28 files in other folders)
