[package]
name = "levelgen-solver"
version = "0.1.0"
edition = "2021"
description = "Native DFS solver for Triplet Tiles level generator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi"]
# Use `cargo test --no-default-features` for solver unit tests without Node N-API.
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
bit-set = "0.5"
rustc-hash = "1"
napi = { version = "2", optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
